# ImageRegion

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  h01.exr  vcpkg.json
ImageRegion/: CMakeLists.txt  ImageRegion.cpp
ImageRegion/inc/: ImageRegion.h  RectGeneration.hpp
ImageRegion/src/: ImageRegion.cpp  RectGeneration.cpp
